--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,7 @@
 ---
+theme :
+  name : twitter
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+{% include JB/setup %}
+{% include themes/twitter/page.html %}
