--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,7 @@
 ---
+theme :
+  name : twitter
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+{% include JB/setup %}
+{% include themes/twitter/post.html %}
