--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -60,30 +60,30 @@ h6 {
   font-weight: bold;
 }
 h1, .h1 {
-  font-size: 34px;
-  line-height: 42px;
-  margin-top: 42px;
-  margin-bottom: 21px;
+  font-size: 32px;
+  line-height: 40px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   letter-spacing: -1px;
 }
 h2, .h2 {
-  font-size: 34px;
-  line-height: 42px;
-  margin-top: 42px;
-  margin-bottom: 21px;
+  font-size: 30px;
+  line-height: 38px;
+  margin-top: 38px;
+  margin-bottom: 16px;
   letter-spacing: -1px;
 }
 h3, .h3 {
-  font-size: 24px;
-  line-height: 28px;
-  margin-top: 29px;
-  margin-bottom:21px;
+  font-size: 22px;
+  line-height: 26px;
+  margin-top: 26px;
+  margin-bottom:18px;
 }
 h4, .h4 {
-  font-size: 20px;
-  line-height: 24px;
-  margin-top: 24px;
-  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 20px;
+  margin-top: 20px;
+  margin-bottom: 18px;
 }
 p,
 ul,
@@ -287,18 +287,6 @@ pre {
 }
 
 
-.unit-article header h1 {
-  color: #2d2d2d;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.unit-article .entry-content h2,
-.unit-article .entry-content h3,
-.unit-article .entry-content h4,
-.unit-article .entry-content h5,
-.unit-article .entry-content h6 {
-  color: #2d2d2d;
-}
 
 /* 20160619 追加 */
 
@@ -745,9 +733,60 @@ pre {
 /*
 	Smartphone
 */
-@media only screen and (min-width: 320px) and (max-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   img {
     max-width: 100%;
+  }
+  .the-header .unit-inner {
+    width: 18.5em;
+  }
+  .the-header .logo a {
+    font-size: 28px;
+    line-height: 35px;
+    letter-spacing: -1px;
+  }
+  .the-header .nav-global {
+    margin-top: 1.1em;
+    letter-spacing: -0.2em;
+    *letter-spacing: normal;
+    word-spacing: -0.3em;
+    list-style: none;
+    padding-left: 0;
+  }
+  .the-header .nav-global .home:after {
+    margin-left: 8px;
+    content: "/";
+  }
+  .the-header .nav-global li {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+    line-height: normal;
+    letter-spacing: normal;
+    margin-right: 8px;
+    word-spacing: normal;
+    vertical-align: middle;
+  }
+  .the-header .nav-global li:last-child {
+    margin-right: 0;
+  }
+  .unit-article .unit-head-inner,
+  .unit-article .entry-content,
+  .unit-article .misc-content,
+  .unit-article .unit-foot-inner {
+    width: 18.5em;
+  }
+  .unit-article .unit-foot .gotop {
+    margin-top: 1.1em;
+  }
+  .layout-page .unit-body .unit-body-inner {
+    width: 18.5em;
+  }
+  .layout-page .unit-body .article-list {
+    width: 18.5em;
+  }
+  .the-footer .unit-foot {
+    width: 18.5em;
   }
 }
 /*
